[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unprint"
version = "0.0.8"
authors = [
  { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "A simple package to unprint stuff in terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

